2002-08-01  Gary Thomas  <gary@mlbassoc.com>

	* src/var_misc.c (cyg_hal_map_memory): Need to set protection bits.

	* include/variant.inc: Additional exceptions.  Also allow for
	more platform specifics (like INTC lookup macro).

	* include/var_regs.h: Allow for platform registers <cyg/hal/plf_regs.h>
	Also, flush out HID0 register (used by cache control).

	* include/var_intr.h: Add PPC60x additional exceptions.

	* include/var_cache.h: Initial cache support.

	* cdl/hal_powerpc_ppc60x.cdl: Support various ROM monitor options,
	matching other variants.

2000-06-13  Jesper Skov  <jskov@redhat.com>

	* cdl/hal_powerpc_ppc60x.cdl: Add vector table location definition.

2000-04-13  Jesper Skov  <jskov@redhat.com>

	* src/var_misc.c (hal_variant_idle_thread_action): Added.

2000-04-11  Jesper Skov  <jskov@redhat.com>

	* cdl/hal_powerpc_ppc60x.cdl: Define VSR table location.

2000-03-01  Jesper Skov  <jskov@redhat.com>

	* include/variant.inc: Forgot conditionals on vector copy code in
	last checkin.

2000-02-28  Jesper Skov  <jskov@redhat.com>

	* include/variant.inc: Only copy vectors when required.

2000-02-21  Jesper Skov  <jskov@redhat.com>

	* src/variant.S:
	* include/variant.inc:
	Use auto-generated symbols.
	
2000-02-11  Jesper Skov  <jskov@redhat.com>

	* src/var_intr.c: include cyg_type header.

	* src/var_misc.c (hal_clear_MMU): Moved MMU functions here.

	* src/PKGconf.mak (COMPILE):
	* cdl/hal_powerpc_ppc60x.cdl: Fix description.
	Added var_intr.c

2000-02-11  John Dallaway  <jld@cygnus.co.uk>

	* cdl/hal_powerpc_ppc60x.cdl:

	Tidy display strings.

2000-02-10  Jesper Skov  <jskov@redhat.com>

	* include/variant.inc: Renamed default VSR handlers.

2000-02-07  Jesper Skov  <jskov@redhat.com>

	* Created.

//===========================================================================
//####ECOSGPLCOPYRIGHTBEGIN####
// -------------------------------------------
// This file is part of eCos, the Embedded Configurable Operating System.