@@ -1,3 +1,8 @@
+2003-01-02  Gary Thomas  <gary@mlbassoc.com>
+
+	* include/var_cache.h: Define HAL_DCACHE_SYNC() - which had been
+	left out before!
+
 2002-08-01  Gary Thomas  <gary@mlbassoc.com>
 
 	* src/var_misc.c (cyg_hal_map_memory): Need to set protection bits.
